skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_tabs__tab_decisions_detail_popup.snap
---
source: tests/snapshot_tabs.rs
expression: "common::render_model(&model)"
---
"┌ Flightdeck ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session demo-decisions  ·  Master pi at /repo/demo  ·  daemon: file-mode  ·  uptime 1h55m  ·  Adhoc 0 · Issue 1 · Workflow 0  ·  fresh  $0.00 · 0 turns · in 0 / out 0           moon ▾ │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Live feed │ Conversations │ Conflicts & merges (issue mode) │ Decisions │ Costs │ Daemon                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ decisions Enter opens answer detail──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Time      Session            Prompt tag                   Answer                                                                                                                                      │"
"│10:09:20  VST-404            external-fix-suggestions     Apply the reviewer fix for the launch path only; keep unrelated daemon…                                                                     │"
"│10:01:00  VST-404            merge-now                    Proceed after checks are green.                                                                                                             │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                           ┌ Decision · VST-404 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ✕ ]┐                           │"
"│                           │ external-fix-suggestions  ·  2026-05-15T10:09:20+00:00                                                                                       │                           │"
"│                           │ Answer                                                                                                                                       │                           │"
"│                           │ Apply the reviewer fix for the launch path only; keep unrelated daemon subscriber changes out of scope, rerun cargo fmt, clippy, cargo test, │                           │"
"│                           │ and cargo insta before committing.                                                                                                           │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │ Session                                                                                                                                      │                           │"
"│                           │ VST-404 · Resolve review prompt                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                            Esc close   ↑/↓ scroll                                                            │                           │"
"│                           └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘                           │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   D prune   g focus   / filter   ⇧M compact   ? help   q quit                                                                       noise: hidden  ·  filter: off"
"                                                                                                                                                                                                        "
